Added CSS to Landing Page

--- a/shop_page.html
+++ b/shop_page.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <section class="element-main element-secondary">
+    <section class="element-secondary">
       <h1 class="shop-title">All Makeup</h1>
 
       <section class="shop-section">
@@ -202,6 +202,10 @@
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
+        </div>
+
+        <div class="more-button">
+          <a class="btn btn-default" href="#">More Products</a>
         </div>
       </section>
     </section>
