--- a/index.html
+++ b/index.html
@@ -30,116 +30,126 @@
       </nav>
     </header>
 
-    <section class="landing-banner">
-      <img src="img/ari-title-banner.png" alt = "Adriana Venti Wearing a Space Helmet in Nebula Cosmetics">
+    <section class="element-tertiary banner-section">
+      <figure>
+        <img class="banner-img" src="img/ari-title-banner.png" alt = "Adriana Venti Wearing a Space Helmet in Nebula Cosmetics">
+      </figure>
+      <div class="banner-container">
+        <h2 class="banner-title">Hypernova Satin Glitter Highlighter</h2>
+        <p class="banner-content">Our newest product made with anti-gravity formulas that lay down vibrant vegan color and sync with skin for a blurred, soft effect.</p>
+        <a class="btn btn-primary" href="shop_page.html">Shop Now</a>
+      </div>
     </section>
 
     <section class="element-main">
-      <section class="section-ingredients">
-        <h2>Beauty With a Purpose</h2>
-        <p>We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
-        <img src="img/ingredients.png" alt = "Icon Illustration with text symbolzing Vegan, Cruelty-Free, Paraben-Free, and Recycable Item Ingredients">
+      <section class="greeting-section">
+        <h2 class="greeting-title">Beauty With a Purpose</h2>
+        <p class="greeting-content">We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
+        <div class="greeting-img-container">
+          <img src="img/vegan-icon.png" alt = "A an icon showing the letter V with text vegan below">
+          <img src="img/cruelty-free-icon.png" alt = "A an icon showing a bunny and a heart with text cruelty-free below">
+          <img src="img/paraben-free-icon.png" alt = "A an icon showing a crossed hazardous chemical with text paraben-free below">
+          <img src="img/recyclable-icon.png" alt = "A an icon showing circular economy arrows forming a heart with text recyclable below">
+        </div>
       </section>
+    </section>
 
-      <section>
-        <h2>Shop Our Bestsellers</h2>
-        <div class="product-listing">
-          <div class="product-listing-container">
-            <div class="product-container">
-              <div class="image-container img-crop">
-              <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
-              </div>
-              <h5 class="product-color">Lavender Kiss</h5>
-              <div>
-                <h4 class="product-name">Essential Drip Lip Oil</h4>
-                <div class="product-shade-container">
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
-                  </div>
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
-                  </div>
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
-                  </div>
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
-                  </div>
+    <section  class="bestseller-section">
+      <div class="product-listing">
+        <div class="product-listing-container">
+          <div class="product-container">
+            <div class="image-container img-crop">
+            <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
+            </div>
+            <h5 class="product-color">Lavender Kiss</h5>
+            <div>
+              <h4 class="product-name">Essential Drip Lip Oil</h4>
+              <div class="product-shade-container">
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
                 </div>
               </div>
             </div>
-            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
+          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
+        </div>
 
-          <div class="product-listing-container">
-            <div class="product-container">
-              <div class="image-container img-crop">
-                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
-              </div>
-              <h5 class="product-color">Miss Neptune</h5>
-              <div>
-                <h4 class="product-name">Highlighter Topper</h4>
-                <div class="product-shade-container">
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
-                  </div>
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
-                  </div>
+        <div class="product-listing-container">
+          <div class="product-container">
+            <div class="image-container img-crop">
+              <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
+            </div>
+            <h5 class="product-color">Miss Neptune</h5>
+            <div>
+              <h4 class="product-name">Highlighter Topper</h4>
+              <div class="product-shade-container">
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
                 </div>
               </div>
             </div>
-            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
+          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
+        </div>
 
-          <div class="product-listing-container">
-            <div class="product-container">
-              <div class="image-container img-crop">
-                <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
-              </div>
-              <h5 class="product-color">Lab Coat</h5>
-              <div>
-                <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
-                <div class="product-shade-container">
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
-                  </div>
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
-                  </div>
-                  <div class="product-shade-crop">
-                    <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
-                  </div>
+        <div class="product-listing-container">
+          <div class="product-container">
+            <div class="image-container img-crop">
+              <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+            </div>
+            <h5 class="product-color">Lab Coat</h5>
+            <div>
+              <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
+              <div class="product-shade-container">
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
                 </div>
               </div>
             </div>
-            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
+          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section>
-        <div>
-          <img src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
-        </div>
-        <div>
-          <h2>Join our exclusive event for 30% off on all items</h2>
-          <p>Join us for an unforgettable experience at our pop-up store located in SFU Surrey. Explore our premium makeup collection and enjoy an exclusive 30% discount on all items.</p>
-          <a class="btn btn-primary" href="events_page.html">Learn More</a>
-        </div>
-      </section>
+    <section class="event-section">
+      <figure>
+        <img class="event-img" src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
+      </figure>
+      <div class="event-container">
+        <h2 class="event-title">Join our event for 30% off on all items</h2>
+        <p class="event-content">Join us for an unforgettable experience at our pop-up store located in SFU Surrey. Explore our premium makeup collection and enjoy an exclusive 30% discount on all items.</p>
+        <a class="btn btn-primary" href="events_page.html">Learn More</a>
+      </div>
+    </section>
 
-      <section>
-        <div>
-          <img src="img/ari-photoshoot.png" alt="Adriana Venti in Nebula Cosmetics">
-        </div>
-        <div>
-          <h2>Our Dream</h2>
-          <p>Together we’re building a safe, welcoming space in beauty and beyond. This is makeup made to feel good in, without hiding what makes you unique. And it’s all vegan and cruelty free.</p>
-          <a class="btn btn-default" href="about_page.html">Our Story</a>
-        </div>
-      </section>
-
+    <section class="about-section">
+      <figure>
+        <img class="about-img" src="img/ari-photoshoot.png" alt="Adriana Venti in Nebula Cosmetics">
+      </figure>
+      <div class="about-container">
+        <h2 class="about-title">Our Dream</h2>
+        <p class="about-content">Together we’re building a safe, welcoming space in beauty and beyond. This is makeup made to feel good in, without hiding what makes you unique. And it’s all vegan and cruelty free.</p>
+        <a class="btn btn-default" href="about_page.html">Our Story</a>
+      </div>
     </section>
 
     <!-- // FOOTER SECTION -->
