Added the Events Page, Updated About Us

--- a/about_page.html
+++ b/about_page.html
@@ -65,9 +65,12 @@
         </div>
       </div>
 
-      <div class="beauty-with-purpose">
-        <h2>Beauty with Purpose </h2>
-      </div>
+      <section class="section-ingredients">
+        <h2>Beauty With a Purpose</h2>
+        <p>We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
+        <img src="img/ingredients.png" alt = "Icon Illustration with text symbolzing Vegan, Cruelty-Free, Paraben-Free, and Recycable Item Ingredients">
+      </section>
+      
     </section>
 
     <!-- // FOOTER SECTION -->
