--- a/events_page.html
+++ b/events_page.html
@@ -30,6 +30,64 @@
       </nav>
     </header>
 
+    <section>
+        <div>
+          <img src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
+        </div>
+        <div>
+          <p> 20th April 2024 </p>
+          <h2>SFU Surrey Pop-Up Store</h2>
+          <p>Immerse yourself in the celestial allure of Nebula as you discover our premium makeup collection, meticulously crafted to ignite your inner star. </p>
+          <p> Don't miss this opportunity to experience beauty like never before. Visit us at SFU Surrey and let Nebula elevate your makeup game to galactic heights. </p>
+          <a class="btn btn-primary" href="events_page.html">Sign up for Event More</a>
+        </div>
+    </section>
+
+    <section>
+      <h2> Why You Should Join the Event </h2>
+        <div>
+          <img src="img/placeholder.png" alt="Placeholder Image"> 
+          <p> An exclusive 30% discount on all items during your visit. </p>
+        </div>
+
+        <div>
+          <img src="img/placeholder.png" alt="Placeholder Image"> 
+          <p> A raffle for a chance to win our Milky Way collection. </p>
+        </div>
+
+        <div>
+          <img src="img/placeholder.png" alt="Placeholder Image"> 
+          <p> Special celebrity guest appearance  </p>
+        </div>
+    </section>
+
+    <section>
+      <h2> Past Events </h2>
+        <div>
+          <img src="img/placeholder.png" alt="Placeholder Image"> 
+          <p> 20th January 2024 </p>
+          <h3> Glam Night </h3>
+          <p> Prepare to dazzle under the stars at Nebula's Galactic Glam Night! Join us for an evening of celestial beauty as we unveil our latest makeup collection with live demonstrations, personalized consultations, and exclusive giveaways.  </p>
+          <a class="btn btn-primary" href="events_page.html">Learn More</a>
+        </div>
+
+        <div>
+          <img src="img/placeholder.png" alt="Placeholder Image"> 
+          <p> 10th December 2023 </p>
+          <h3> Stellar Workshop </h3>
+          <p> Dive into the colorful cosmos with Nebula's Stellar Shades Workshop! Discover the art of blending and contouring as our expert makeup artists guide you through a hands-on experience with our signature eyeshadow palettes. </p>
+          <a class="btn btn-primary" href="events_page.html">Learn More</a>
+        </div>
+
+        <div>
+          <img src="img/placeholder.png" alt="Placeholder Image"> 
+          <p> 5th September 2023 </p>
+          <h3> Breakfast Brunch </h3>
+          <p> Join us for a morning of pampering and relaxation as we treat you to decadent refreshments, luxurious skincare rituals, and mini-makeovers featuring our bestselling products. This event is the perfect opportunity to recharge and rejuvenate your beauty routine. </p>
+          <a class="btn btn-primary" href="events_page.html">Learn More</a>
+        </div>
+    </section>
+
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
