Added Reviews to Product Page

--- a/product_page.html
+++ b/product_page.html
@@ -61,6 +61,33 @@
       </div>
     </div>
 
+  <section>
+    <div>
+      <h4> Customer Reviews </h4>
+      <h2> 4.8 </h2>
+      <img src="img/reviews-4.8-stars.png" alt="4.8 stars review">
+      <a class="btn btn-primary" href="events_page.html">Leave a Review</a>
+    <div>
+
+    <div class="product-review">
+      <h5> Britney S. Pears </h5>
+      <img src="img/reviews-5-stars.png" alt="4.8 stars review">
+      <p> Great Product! I really enjoyed how it looks on me :) </p>
+    <div>
+
+    <div class="product-review">
+      <h5> Britney S. Pears </h5>
+      <img src="img/reviews-5-stars.png" alt="4.8 stars review">
+      <p> Great Product! I really enjoyed how it looks on me :) </p>
+    <div>
+
+    <div class="product-review">
+      <h5> Britney S. Pears </h5>
+      <img src="img/reviews-5-stars.png" alt="4.8 stars review">
+      <p> Great Product! I really enjoyed how it looks on me :) </p>
+    <div>
+  </section>
+
     <div class="related-items">
     <h3> Related Items </h3>
     <div class="product-reccomendations">
