Fixed Footer Links

--- a/cart_page.html
+++ b/cart_page.html
@@ -137,18 +137,12 @@
 
           <div class="footer-nav">
             <h5 class="footer-title">Guidelines</h5>
-            <a class="footer-link" href="#branding_idea">Branding Idea</a>
-            <a class="footer-link" href="#interactive_elements"
-              >Interactive Elements</a
-            >
-            <a class="footer-link" href="#text_elements">Text Elements</a>
-            <a class="footer-link" href="#combined_elements"
-              >Combined Elements</a
-            >
-            <a class="footer-link" href="#design_guidelines"
-              >Design Guidelines</a
-            >
-            <a class="footer-link" href="#citation">Citation</a>
+            <a class="footer-link" href="style_guide_page.html #branding_idea">Branding Idea</a>
+            <a class="footer-link" href="style_guide_page.html #interactive_elements"> Interactive Elements</a>
+            <a class="footer-link" href="style_guide_page.html #text_elements">Text Elements</a>
+            <a class="footer-link" href="style_guide_page.html #combined_elements">Combined Elements</a>
+            <a class="footer-link" href="style_guide_page.html #design_guidelines">Design Guidelines</a>
+            <a class="footer-link" href="style_guide_page.html #citation">Citation</a>
           </div>
         </div>
       </div>
