--- a/index.html
+++ b/index.html
@@ -171,16 +171,10 @@
             <div class="footer-nav">
               <h5 class="footer-title">Guidelines</h5>
               <a class="footer-link" href="#branding_idea">Branding Idea</a>
-              <a class="footer-link" href="#interactive_elements"
-                >Interactive Elements</a
-              >
+              <a class="footer-link" href="#interactive_elements">Interactive Elements</a >
               <a class="footer-link" href="#text_elements">Text Elements</a>
-              <a class="footer-link" href="#combined_elements"
-                >Combined Elements</a
-              >
-              <a class="footer-link" href="#design_guidelines"
-                >Design Guidelines</a
-              >
+              <a class="footer-link" href="#combined_elements">Combined Elements</a>
+              <a class="footer-link" href="#design_guidelines">Design Guidelines</a>
               <a class="footer-link" href="#citation">Citation</a>
             </div>
           </div>
