Updated Contact, About, Product Page
Updated the layout, added images, tidied up reviews section

--- a/product_page.html
+++ b/product_page.html
@@ -61,30 +61,30 @@
       </div>
     </div>
 
-  <section>
-    <div>
-      <h4> Customer Reviews </h4>
+  <section class="product-review-section">
+     <div class="overall-review">
+      <h3> Customer Reviews </h3>
       <h2> 4.8 </h2>
       <img src="img/reviews-4.8-stars.png" alt="4.8 stars review">
       <a class="btn btn-primary" href="events_page.html">Leave a Review</a>
-    <div>
+    </div>
 
     <div class="product-review">
       <h5> Britney S. Pears </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
       <p> Great Product! I really enjoyed how it looks on me :) </p>
-    <div>
+    </div>
 
     <div class="product-review">
-      <h5> Britney S. Pears </h5>
+      <h5> Cartier Bae </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
-      <p> Great Product! I really enjoyed how it looks on me :) </p>
-    <div>
+      <p> Product applied really well onto skin. Would purchase again in a different shade </p>
+    </div>
 
     <div class="product-review">
-      <h5> Britney S. Pears </h5>
+      <h5> Solange Gomez </h5>
       <img src="img/reviews-5-stars.png" alt="4.8 stars review">
-      <p> Great Product! I really enjoyed how it looks on me :) </p>
+      <p> Love the color on me! A must have for me, it pairs really well with the Lip Drip Oil</p>
     <div>
   </section>
 
