--- a/about_page.html
+++ b/about_page.html
@@ -65,12 +65,15 @@
         </div>
       </div>
 
-      <section class="section-ingredients">
-        <h2>Beauty With a Purpose</h2>
-        <p>We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
-        <img src="img/ingredients.png" alt = "Icon Illustration with text symbolzing Vegan, Cruelty-Free, Paraben-Free, and Recycable Item Ingredients">
-      </section>
-      
+      <section class="greeting-section">
+        <h2 class="greeting-title">Beauty With a Purpose</h2>
+        <p class="greeting-content">We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
+        <div class="greeting-img-container">
+          <img src="img/vegan-icon.png" alt = "A an icon showing the letter V with text vegan below">
+          <img src="img/cruelty-free-icon.png" alt = "A an icon showing a bunny and a heart with text cruelty-free below">
+          <img src="img/paraben-free-icon.png" alt = "A an icon showing a crossed hazardous chemical with text paraben-free below">
+          <img src="img/recyclable-icon.png" alt = "A an icon showing circular economy arrows forming a heart with text recyclable below">
+      </section>    
     </section>
 
     <!-- // FOOTER SECTION -->
