--- a/contact_page.html
+++ b/contact_page.html
@@ -30,9 +30,9 @@
       </nav>
     </header>
 
-    <section class="element-main support-page">
+    <section class="element-main contact-page">
     <div class="grid element-grid">
-      <div class="Customer-Support">
+      <div class="customer-support">
         <h2> Customer Support </h2>
         <h4> Customer Service Hours </h4>
       <div class="service-hours">
@@ -68,13 +68,13 @@
       </div>
     </div>
 
-    <div class="Google-Maps">
+    <div class="google-maps">
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14593.86253543211!2d-122.99523973691359!3d49.24206314304469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1708670941017!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 
 
-    <div class="Customer-Support-Feedback">
+    <div class="customer-support-feedback">
       <h2> If you have any questions or concerns, we’d love to hear from you </h2>
       <div class="input-container">
         <label class=form-label for="name">Name</label>
