--- a/product_page.html
+++ b/product_page.html
@@ -38,24 +38,29 @@
       </div>
 
       <div class="product-details">
-        <h5 class="product-color">Midnight Shadow</h5>
-        <h3 class="product-name">Lustrous Liquid Eyeshadow</h3>
-          <div class="product-shades">
-            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
-            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
-            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+        <h5>Midnight Shadow</h5>
+        <h3>Lustrous Liquid Eyeshadow</h3>
+          <div class="product-shade-container">
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+            </div>
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+            </div>
+            <div class="product-shade-crop">
+              <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+            </div>
           </div>
-          <p> Shade: Lab Coat </p>
+        <p> Shade: Lab Coat </p>
+        <div class="item-add">
+          <input class="quantity-box" type="number" value="1" min="1"/>
+          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
+        </div>
 
-          <div class="item-add">
-            <input class="quantity-box" type="number" value="1" min="1"/>
-            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
-          </div>
-
-          <hr>
+        <hr>
           <h4>Product Description </h4>
           <p> Go from subtle to standout in seconds with one-stroke color payoff that won’t crease or wear off. our stunning range of universally flattering shades weightlessly wash over lids before drying down to a lustrous, crease-resistant finish. the fluffy, tapered teardrop applicator deposits long-wearing liquid pigments allover and doubles as eyeliner. high-impact color has never been easier. </p>
-          <hr>
+        <hr>
           <h4> Ingredients</h4>
           <p> Isododecane, calcium aluminum borosilicate, trimethylsiloxysilicate, silica, ribehenate/isostearate/eicosandioate, calcium sodium borosilicate, octyldodecanol, hydrogenated styrene/isoprene copolymer, disteardimonium hectorite, alcohol denat., caprylic/capric triglyceride, polyhydroxystearic acid, polyisoprene, tin oxide, isostearic acid, pentaerythrityl tetra-di-t-butyl hydroxyhydrocinnamate, lecithin, polyglyceryl-3 polyricinoleate, water/aqua/eau, talc, calcium titanium borosilicate, synthetic fluorphlogopite, bht, titanium dioxide (ci 77891), iron oxides (ci 77491/ ci 77492/ ci 77499). </p>
       </div>
