Updated About-Us & Events Page Layout

--- a/events_page.html
+++ b/events_page.html
@@ -30,62 +30,64 @@
       </nav>
     </header>
 
-    <section>
-        <div>
-          <img src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
-        </div>
-        <div>
-          <p> 20th April 2024 </p>
-          <h2>SFU Surrey Pop-Up Store</h2>
-          <p>Immerse yourself in the celestial allure of Nebula as you discover our premium makeup collection, meticulously crafted to ignite your inner star. </p>
-          <p> Don't miss this opportunity to experience beauty like never before. Visit us at SFU Surrey and let Nebula elevate your makeup game to galactic heights. </p>
-          <a class="btn btn-primary" href="events_page.html">Sign up for Event More</a>
-        </div>
+    <section class="event-section">
+      <figure>
+        <img class="event-img" src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
+      </figure>
+      <div class="event-container">
+        <h4> 20th April 2024 </h4>
+        <h2 class="event-title">SFU Surrey Pop-Up</h2>
+        <p class="event-content">Immerse yourself in the celestial allure of Nebula as you discover our premium makeup collection, meticulously crafted to ignite your inner star.</p>
+        <p class="event-content">Don't miss this opportunity to experience beauty like never before. Visit us at SFU Surrey and let Nebula elevate your makeup game to galactic heights. </p>
+        <a class="btn btn-primary" href="events_page.html">Sign up for the event</a>
+      </div>
     </section>
 
-    <section>
-      <h2> Why You Should Join the Event </h2>
-        <div>
-          <img src="img/placeholder.png" alt="Placeholder Image"> 
-          <p> An exclusive 30% discount on all items during your visit. </p>
+     <section class="join-us-section">
+        <h2 class="join-us-text">Why You Should Join the Event</h2>
+        <div class="join-us-img-container">
+          <div class="join-us-reasoning">
+            <img src="img/placeholder.png" alt = "An icon representing the 30% discount that will be offered at the ">
+            <p> An exclusive 30% discount on all items during your visit. </p>
+          </div>
+          <div class="join-us-reasoning">
+            <img src="img/placeholder.png" alt = "An icon of a ticket represetnting a raffle that will be done">
+            <p> A raffle for a chance to win our Milky Way collection. </p>
+          </div>
+          <div class="join-us-reasoning">
+            <img src="img/placeholder.png" alt = "An icon representing a surprise celebrity visit">
+            <p> Special celebrity guest appearance  </p>
+          </div>
         </div>
+    </section>    
 
-        <div>
-          <img src="img/placeholder.png" alt="Placeholder Image"> 
-          <p> A raffle for a chance to win our Milky Way collection. </p>
-        </div>
-
-        <div>
-          <img src="img/placeholder.png" alt="Placeholder Image"> 
-          <p> Special celebrity guest appearance  </p>
-        </div>
-    </section>
-
-    <section>
+    <section class="past-events">
       <h2> Past Events </h2>
-        <div>
-          <img src="img/placeholder.png" alt="Placeholder Image"> 
-          <p> 20th January 2024 </p>
+      <div class="all-past-events">
+        <div class="list-of-events">
+          <img src="img/placeholder2.png" alt="Banner image for Glam Night event"> 
+          <h4> 20th January 2024 </h4>
           <h3> Glam Night </h3>
           <p> Prepare to dazzle under the stars at Nebula's Galactic Glam Night! Join us for an evening of celestial beauty as we unveil our latest makeup collection with live demonstrations, personalized consultations, and exclusive giveaways.  </p>
           <a class="btn btn-primary" href="events_page.html">Learn More</a>
         </div>
 
-        <div>
-          <img src="img/placeholder.png" alt="Placeholder Image"> 
-          <p> 10th December 2023 </p>
+        <div class="list-of-events">
+          <img src="img/placeholder2.png" alt="Banner image for Stellar Workshop event"> 
+          <h4> 10th December 2023 </h4>
           <h3> Stellar Workshop </h3>
           <p> Dive into the colorful cosmos with Nebula's Stellar Shades Workshop! Discover the art of blending and contouring as our expert makeup artists guide you through a hands-on experience with our signature eyeshadow palettes. </p>
           <a class="btn btn-primary" href="events_page.html">Learn More</a>
         </div>
 
-        <div>
-          <img src="img/placeholder.png" alt="Placeholder Image"> 
-          <p> 5th September 2023 </p>
+        <div class="list-of-events">
+          <img src="img/placeholder2.png" alt="Banner image for Breakfast Brunch event"> 
+          <h4> 5th September 2023 </h4>
           <h3> Breakfast Brunch </h3>
           <p> Join us for a morning of pampering and relaxation as we treat you to decadent refreshments, luxurious skincare rituals, and mini-makeovers featuring our bestselling products. This event is the perfect opportunity to recharge and rejuvenate your beauty routine. </p>
           <a class="btn btn-primary" href="events_page.html">Learn More</a>
         </div>
+      </div>
     </section>
 
     <!-- // FOOTER SECTION -->
