--- a/about_page.html
+++ b/about_page.html
@@ -30,24 +30,24 @@
       </nav>
     </header>
 
-    <section class="element-main about-page">
+    <section class="about-page">
       <div class="about-nebula">
-        <div class="about-content">
+        <div class="about-content-text">
           <h2>About Nebula </h2>
           <p> Nebula is created as a brand that produces product with a celestial fusion of artistry and science, offering a cosmic array of makeup products designed to empower and inspire. </p>
           <p> At Nebula, anyone can embark on a cosmic journey of self-expression and empowerment where beauty knows no bounds and every product tells a story </p>
         </div>
         <div class="about-images">
-          <img src="img/about-us-founder.png" alt="Nebula Founder, Adriana Venti" />
+          <img src="img/about-us-founder.png" alt="Nebula Founder, Adriana Venti">
         </div>
       </div>
 
       <div class="founder-quote">
         <div class="about-images-product">
-        <img src="img/about-us-products.png" alt="A picture of several Nebula Products" />
+          <img src="img/about-us-products.png" alt="A picture of several Nebula Products">
         </div>
 
-        <div class="about-content">
+        <div class="about-founder-quote">
           <h5> FOUNDER QUOTE </h5>
           <h3>“Nebula is about being comfortable with yourself. There is no longer a need to be perfect, just be your most authentic self.” </h3>
           <h5> ADRIANA VENTI </h5>
@@ -55,8 +55,8 @@
       </div>
 
       <div class="about-inclusivity">
-        <div class="about-content">
-          <h2>Inclusivity Shines </h2>
+        <div class="about-content-text">
+          <h2> Inclusivity Shines </h2>
           <p> At Nebula, we believe that beauty is for people of all shades, personalities, attitudes, cultures, and race. We celebrate diversity and aim to help everyone find their perfect match and unleash their inner star. Everyone should feel included, and we want you to explore what creativity means to you. </p>
           <p> Make up provides the opportunity to help people feel even more beautiful than they already are in their own skin. Together we’re building a safe, welcoming space in beauty and beyond. </p>
         </div>
@@ -70,9 +70,9 @@
         <p class="greeting-content">We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
         <div class="greeting-img-container">
           <img src="img/vegan-icon.png" alt = "A an icon showing the letter V with text vegan below">
-          <img src="img/cruelty-free-icon.png" alt = "A an icon showing a bunny and a heart with text cruelty-free below">
-          <img src="img/paraben-free-icon.png" alt = "A an icon showing a crossed hazardous chemical with text paraben-free below">
-          <img src="img/recyclable-icon.png" alt = "A an icon showing circular economy arrows forming a heart with text recyclable below">
+          <img src="img/cruelty-free-icon.png" alt = "An icon showing a bunny and a heart with text cruelty-free below">
+          <img src="img/paraben-free-icon.png" alt = "An icon showing a crossed hazardous chemical with text paraben-free below">
+          <img src="img/recyclable-icon.png" alt = "An icon showing circular economy arrows forming a heart with text recyclable below">
       </section>    
     </section>
 
