Added New Footer (Homepage only)
Still needs fixing:

Form elements does not shrink

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <title>Nebula Style Guide</title>
 
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="css/token.css" rel="stylesheet" type="text/css"/>
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="css/grid.css" rel="stylesheet" type="text/css" />
+    <link href="css/token.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -20,7 +20,11 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
+          <img
+            src="svg/NEBULA.svg"
+            alt="Logo of Nebula Makeup Brand"
+            class="logo"
+          />
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -32,11 +36,18 @@
 
     <section class="element-tertiary banner-section">
       <figure>
-        <img class="banner-img" src="img/ari-title-banner.png" alt = "Adriana Venti Wearing a Space Helmet in Nebula Cosmetics">
+        <img
+          class="banner-img"
+          src="img/ari-title-banner.png"
+          alt="Adriana Venti Wearing a Space Helmet in Nebula Cosmetics"
+        />
       </figure>
       <div class="banner-container">
         <h2 class="banner-title">Hypernova Satin Glitter Highlighter</h2>
-        <p class="banner-content">Our newest product made with anti-gravity formulas that lay down vibrant vegan color and sync with skin for a blurred, soft effect.</p>
+        <p class="banner-content">
+          Our newest product made with anti-gravity formulas that lay down
+          vibrant vegan color and sync with skin for a blurred, soft effect.
+        </p>
         <a class="btn btn-primary" href="shop_page.html">Shop Now</a>
       </div>
     </section>
@@ -44,147 +55,244 @@
     <section class="element-main">
       <section class="greeting-section">
         <h2 class="greeting-title">Beauty With a Purpose</h2>
-        <p class="greeting-content">We are dedicated to selecting makeup ingredients that not only benefit your skin but also minimize harm to the environment. Additionally, we prioritize recyclable packaging to reduce waste and promote sustainability.</p>
+        <p class="greeting-content">
+          We are dedicated to selecting makeup ingredients that not only benefit
+          your skin but also minimize harm to the environment. Additionally, we
+          prioritize recyclable packaging to reduce waste and promote
+          sustainability.
+        </p>
         <div class="greeting-img-container">
-          <img src="img/vegan-icon.png" alt = "A an icon showing the letter V with text vegan below">
-          <img src="img/cruelty-free-icon.png" alt = "A an icon showing a bunny and a heart with text cruelty-free below">
-          <img src="img/paraben-free-icon.png" alt = "A an icon showing a crossed hazardous chemical with text paraben-free below">
-          <img src="img/recyclable-icon.png" alt = "A an icon showing circular economy arrows forming a heart with text recyclable below">
+          <img
+            src="img/vegan-icon.png"
+            alt="A an icon showing the letter V with text vegan below"
+          />
+          <img
+            src="img/cruelty-free-icon.png"
+            alt="A an icon showing a bunny and a heart with text cruelty-free below"
+          />
+          <img
+            src="img/paraben-free-icon.png"
+            alt="A an icon showing a crossed hazardous chemical with text paraben-free below"
+          />
+          <img
+            src="img/recyclable-icon.png"
+            alt="A an icon showing circular economy arrows forming a heart with text recyclable below"
+          />
         </div>
       </section>
     </section>
 
-    <section  class="bestseller-section">
+    <section class="bestseller-section">
       <div class="product-listing">
         <div class="product-listing-container">
           <div class="product-container">
             <div class="image-container img-crop">
-            <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
+              <a href="#">
+                <img
+                  class="img img-product"
+                  src="img/essential-drip-lip-oil.png"
+                  alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"
+                />
+              </a>
             </div>
             <h5 class="product-color">Lavender Kiss</h5>
             <div>
               <h4 class="product-name">Essential Drip Lip Oil</h4>
               <div class="product-shade-container">
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
+                  <img
+                    class="product-shade-display"
+                    src="img/essential-drip-lip-oil-color1.png"
+                    alt="Essential Drip Lip Oil Shade Options in Purple"
+                  />
                 </div>
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
+                  <img
+                    class="product-shade-display"
+                    src="img/essential-drip-lip-oil-color2.png"
+                    alt="Essential Drip Lip Oil Shade Options in Pink"
+                  />
                 </div>
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
+                  <img
+                    class="product-shade-display"
+                    src="img/essential-drip-lip-oil-color3.png"
+                    alt="Essential Drip Lip Oil Shade Options in Green"
+                  />
                 </div>
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
+                  <img
+                    class="product-shade-display"
+                    src="img/essential-drip-lip-oil-color4.png"
+                    alt="Essential Drip Lip Oil Shade Options in Dark Brown"
+                  />
                 </div>
               </div>
             </div>
           </div>
-          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
+          <a class="btn-secondary product-button" href="cart_page.html"
+            >Add to Cart $17</a
+          >
         </div>
 
         <div class="product-listing-container">
           <div class="product-container">
             <div class="image-container img-crop">
-              <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
+              <a href="#">
+                <img
+                  class="img img-product"
+                  src="img/highlight-topper.png"
+                  alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"
+                />
+              </a>
             </div>
             <h5 class="product-color">Miss Neptune</h5>
             <div>
               <h4 class="product-name">Highlighter Topper</h4>
               <div class="product-shade-container">
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
+                  <img
+                    class="product-shade-display"
+                    src="img/highlight-topper-color1.png"
+                    alt="Highlight Topper Shade Options in Purple"
+                  />
                 </div>
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
+                  <img
+                    class="product-shade-display"
+                    src="img/highlight-topper-color2.png"
+                    alt="Highlight Topper Shade Options in Green"
+                  />
                 </div>
               </div>
             </div>
           </div>
-          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
+          <a class="btn-secondary product-button" href="cart_page.html"
+            >Add to Cart $17</a
+          >
         </div>
 
         <div class="product-listing-container">
           <div class="product-container">
             <div class="image-container img-crop">
-              <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
+              <a href="product_page.html">
+                <img
+                  class="img img-product"
+                  src="img/lustrous-liquid-eyeshadow.png"
+                  alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"
+                />
+              </a>
             </div>
             <h5 class="product-color">Lab Coat</h5>
             <div>
               <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
               <div class="product-shade-container">
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+                  <img
+                    class="product-shade-display"
+                    src="img/lustrous-liquid-eyeshadow-color1.png"
+                    alt="Lustrous Liquid Eyeshadow Shade Options in White"
+                  />
                 </div>
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+                  <img
+                    class="product-shade-display"
+                    src="img/lustrous-liquid-eyeshadow-color2.png"
+                    alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown"
+                  />
                 </div>
                 <div class="product-shade-crop">
-                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+                  <img
+                    class="product-shade-display"
+                    src="img/lustrous-liquid-eyeshadow-color3.png"
+                    alt="Lustrous Liquid Eyeshadow Shade Options in Purple"
+                  />
                 </div>
               </div>
             </div>
           </div>
-          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
+          <a class="btn-secondary product-button" href="cart_page.html"
+            >Add to Cart $17</a
+          >
         </div>
       </div>
     </section>
 
     <section class="event-section">
       <figure>
-        <img class="event-img" src="img/events-pop-up-store.png" alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background">
+        <img
+          class="event-img"
+          src="img/events-pop-up-store.png"
+          alt="An Eyeliner Pencil, Lipstick Marker and Purple Powder Spinning Around a Circular Glass Platform with Dark Background"
+        />
       </figure>
       <div class="event-container">
         <h2 class="event-title">Join our event for 30% off on all items</h2>
-        <p class="event-content">Join us for an unforgettable experience at our pop-up store located in SFU Surrey. Explore our premium makeup collection and enjoy an exclusive 30% discount on all items.</p>
+        <p class="event-content">
+          Join us for an unforgettable experience at our pop-up store located in
+          SFU Surrey. Explore our premium makeup collection and enjoy an
+          exclusive 30% discount on all items.
+        </p>
         <a class="btn btn-primary" href="events_page.html">Learn More</a>
       </div>
     </section>
 
     <section class="about-section">
       <figure>
-        <img class="about-img" src="img/ari-photoshoot.png" alt="Adriana Venti in Nebula Cosmetics">
+        <img
+          class="about-img"
+          src="img/ari-photoshoot.png"
+          alt="Adriana Venti in Nebula Cosmetics"
+        />
       </figure>
       <div class="about-container">
         <h2 class="about-title">Our Dream</h2>
-        <p class="about-content">Together we’re building a safe, welcoming space in beauty and beyond. This is makeup made to feel good in, without hiding what makes you unique. And it’s all vegan and cruelty free.</p>
+        <p class="about-content">
+          Together we’re building a safe, welcoming space in beauty and beyond.
+          This is makeup made to feel good in, without hiding what makes you
+          unique. And it’s all vegan and cruelty free.
+        </p>
         <a class="btn btn-default" href="about_page.html">Our Story</a>
       </div>
     </section>
 
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
-        <div class="footer-box">
-          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
-  
-          <div class="footer-nav-container">
-            <div class="footer-nav">
-              <h5 class="footer-title">Discover</h5>
-              <a class="footer-link" href="shop_page.html">Shop</a>
-              <a class="footer-link" href="about_page.html">About</a>
-              <a class="footer-link" href="events_page.html">Events</a>
-              <a class="footer-link" href="style_guide_page.html">Style Guide</a>
-              <a class="footer-link" href="contact_page.html">Contact</a>
-              <a class="footer-link" href="cart_page.html">Cart</a>
-            </div>
-  
-            <div class="footer-nav">
-              <h5 class="footer-title">Guidelines</h5>
-              <a class="footer-link" href="#branding_idea">Branding Idea</a>
-              <a class="footer-link" href="#interactive_elements"
-                >Interactive Elements</a
-              >
-              <a class="footer-link" href="#text_elements">Text Elements</a>
-              <a class="footer-link" href="#combined_elements"
-                >Combined Elements</a
-              >
-              <a class="footer-link" href="#design_guidelines"
-                >Design Guidelines</a
-              >
-              <a class="footer-link" href="#citation">Citation</a>
-            </div>
+      <div class="footer-box">
+
+        <div class="footer-nav-container">
+          <div class="footer-nav">
+            <p class="footer-title">Discover</p>
+            <a class="footer-link" href="shop_page.html">Shop All</a>
+            <a class="footer-link" href="about_page.html">About Us</a>
+            <a class="footer-link" href="events_page.html">Events</a>
+            <a class="footer-link" href="style_guide_page.html">Style Guide</a>
+            <a class="footer-link" href="cart_page.html">Cart</a>
+          </div>
+
+          <div class="footer-nav">
+            <p class="footer-title">Help</p>            
+            <a class="footer-link" href="contact_page.html">Contact Us</a>
+            <a class="footer-link" href=#>Shipping & Return</a>
+            <a class="footer-link" href=#>Privacy Policy</a>
+            <a class="footer-link" href=#>Terms of Service</a>
+            <a class="footer-link" href=#>FAQ</a>
           </div>
         </div>
-      </footer>
-    </body>
-  </html>        
+
+        <div class="footer-newsletter">
+          <form method="post" action="#">
+            <label for="newsletter-email">Keep dreaming & get updates for our exclusive emails and offers</label>
+            <input type="text" id="newsletter-email" placeholder="Enter email address">
+            <input type="Submit" value="Submit" class="btn-secondary footer-btn">
+          </form>
+        </div>
+
+      </div>
+
+      <div>
+        <p class="copyright">© 2024  Nebula. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
+</html>
